--- a/resources/style.css
+++ b/resources/style.css
@@ -21,10 +21,29 @@
 .week {
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row; }
+  justify-content: space-between; }
+  @media (max-width: 768px) {
+    .week {
+      -webkit-flex-direction: column;
+      flex-direction: column; } }
+  @media (min-width: 768px) and (max-width: 1023px) {
+    .week {
+      -webkit-flex-direction: row;
+      flex-direction: row; } }
+  @media (min-width: 1024px) {
+    .week {
+      -webkit-flex-direction: row;
+      flex-direction: row; } }
 
-@media (max-width: 768px) {
-  .week {
-    -webkit-flex-direction: column;
-    flex-direction: column; } }
+.day {
+  border: 1px solid black;
+  flex-grow: 1;
+  flex-basis: 0; }
+
+.day-header {
+  padding: 5px;
+  font-weight: 600;
+  border-bottom: 1px solid black; }
+
+.day-body {
+  padding: 5px; }
