--- a/resources/sass/week.scss
+++ b/resources/sass/week.scss
@@ -22,17 +22,43 @@
 }
 
 .day {
-  border: 1px solid black;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
   flex-grow: 1;
   flex-basis: 0;
-}
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 2px;
 
-.day-header {
-  padding: 5px;
-  font-weight: 600;
-  border-bottom: 1px solid black;
-}
+  @include phone {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-basis: auto;
+  }
 
-.day-body {
-  padding: 5px;
+  .day-header {
+    border-bottom: 1px solid black;
+    font-weight: 600;
+    padding: 5px;
+    background-color: lightgray;
+  }
+
+  .day-body {
+    padding: 5px;
+  }
+
+  .day-buttons {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+  }
+
+  .fa, .glyphicon {
+    margin-left: 5px;
+  }
 }
