--- a/resources/style.css
+++ b/resources/style.css
@@ -36,14 +36,33 @@
       flex-direction: row; } }
 
 .day {
-  border: 1px solid black;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
   flex-grow: 1;
-  flex-basis: 0; }
-
-.day-header {
-  padding: 5px;
-  font-weight: 600;
-  border-bottom: 1px solid black; }
-
-.day-body {
-  padding: 5px; }
+  flex-basis: 0;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 2px; }
+  @media (max-width: 768px) {
+    .day {
+      -webkit-flex-direction: column;
+      flex-direction: column;
+      flex-grow: 0;
+      flex-basis: auto; } }
+  .day .day-header {
+    border-bottom: 1px solid black;
+    font-weight: 600;
+    padding: 5px;
+    background-color: lightgray; }
+  .day .day-body {
+    padding: 5px; }
+  .day .day-buttons {
+    display: -webkit-flex;
+    display: flex;
+    justify-content: center;
+    -webkit-flex-direction: row;
+    flex-direction: row; }
+  .day .fa, .day .glyphicon {
+    margin-left: 5px; }
