--- a/resources/sass/mixins.scss
+++ b/resources/sass/mixins.scss
@@ -1,5 +1,6 @@
 $tablet-width: 768px;
-$desktop-width: 1024px;
+$desktop-width: 992px;
+$lg-desktop-width: 1160px;
 
 @mixin tablet {
   @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
@@ -9,6 +10,12 @@ $desktop-width: 1024px;
 
 @mixin desktop {
   @media (min-width: #{$desktop-width}) {
+    @content;
+  }
+}
+
+@mixin md-desktop {
+  @media (min-width: #{$lg-desktop-width}) {
     @content;
   }
 }
