--- a/resources/sass/week.scss
+++ b/resources/sass/week.scss
@@ -1,5 +1,10 @@
 @import 'mixins';
 
+.panel-heading h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .week {
   display: -webkit-flex;
   display: flex;
@@ -69,6 +74,11 @@
 
     hr {
       margin-top: 65px;
+      margin-bottom: 0px;
+    }
+
+    .btn {
+      padding: 6px 8px;
     }
 
   }
@@ -90,12 +100,43 @@
     margin-left: 5px;
   }
 
-  .form-control {
+  .input-group {
     padding: 2px 4px;
-  }
 
-  .input-group-addon {
-    padding: 2px 4px;
+    .form-control {
+      padding: 2px 4px;
+
+      @include tablet {
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+
+      @include desktop {
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+
+      @include md-desktop {
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+      }
+    }
+
+    .input-group-addon {
+      padding: 2px 4px;
+
+      @include tablet {
+        display: none;
+      }
+      @include desktop {
+        display: none;
+      }
+
+      @include md-desktop {
+        display: table-cell;
+      }
+    }
+
   }
 
 }
