removed week picker, rolling simpler week picker

--- a/resources/sass/week.scss
+++ b/resources/sass/week.scss
@@ -125,7 +125,7 @@
 
 }
 
-.DayPicker-Weekdays div {
+.week-nav {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
@@ -134,7 +134,7 @@
   margin-bottom: 7px;
 }
 
-.DayPicker-Weekday {
+.week-nav-day {
   display: block;
   height: 30px;
   width: 30px;
