--- a/resources/sass/week.scss
+++ b/resources/sass/week.scss
@@ -30,6 +30,7 @@
   border: 2px solid black;
   border-radius: 5px;
   margin: 2px;
+  margin-top: 54px;
 
   @include phone {
     -webkit-flex-direction: column;
@@ -148,4 +149,53 @@
   position: relative;
   box-shadow: 1px 1px 1px 0px $shadow-color;
   border: 1px solid green;
+}
+
+.week-nav-day {
+  width: 50px;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  align-items: center;
+}
+
+.preview-status-button-container {
+  display: -webkit-flex;
+  display: flex;
+  background-color: white;
+  width: 42px;
+  height: 80px;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  margin-top: 1px;
+}
+
+.preview-status-buttons {
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  border: 1px solid green;
+  margin-bottom: 2px;
+  border-radius: 5px;
+  background-color: lightgrey;
+}
+
+.preview-status-button-eat {
+  width: 21px;
+  height: 21px;
+  padding: 1px;
+  border-radius: 5px;
+}
+
+.preview-status-button-fit {
+  width: 21px;
+  height: 21px;
+  padding: 1px;
+  background-color: lightgrey;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
