tweaked padding on buttons, not happy with it

--- a/resources/sass/week.scss
+++ b/resources/sass/week.scss
@@ -185,17 +185,18 @@
 .preview-status-button-eat {
   width: 21px;
   height: 21px;
-  padding: 1px;
+  padding: 4px 1px ;
   border-radius: 5px;
 }
 
 .preview-status-button-fit {
   width: 21px;
   height: 21px;
-  padding: 1px;
+  padding: 4px 1px ;
   background-color: lightgrey;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
+  border-radius: 5px;
 }
