properly update links in weekday picker when the week is changed

--- a/resources/sass/week-header.scss
+++ b/resources/sass/week-header.scss
@@ -84,9 +84,9 @@
     padding-right: 1px;
   }
 
-  &:hover {
-    border: 1px dashed blue;
-  }
+  //&:hover {
+  //  border: 1px dashed blue;
+  //}
 }
 
 .preview-status-button-eat {
